--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@ Far Cry 5 </a>
 </html>
 <script>
 function openProjects() {
-    window.open("projects.php","_self");
+    window.open("projects.html","_self");
 }
 function workwithme(){
-	 window.open("workwithme.php","_self");
+	 window.open("workwithme.html","_self");
 }
 </script>
