--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@ Contact Me
 </div>
   </div>
   <div align="center">
-
+  
+  <!-- do not display at moment
 <p id="text1">
 Some of the things i am currently busy doing with my spare time. Reading Book:
 </p>
@@ -99,7 +100,7 @@ PlayerUnknown's Battleground </a>
 <a href="https://far-cry.ubisoft.com/game/en-us/home/" target="_blank" style="text-decoration:none">
 Far Cry 5 </a>
 </p>
-
+-->
 
 </div>
 </div>
