--- a/projects.html
+++ b/projects.html
@@ -78,7 +78,7 @@ Bug Tracking System </a>
 </p>
 
 <p id="text2">
-<a href="workwithme.php" target="_blank" style="text-decoration:none">
+<a href="workwithme.html" target="_blank" style="text-decoration:none">
 Rent and Sell Application </a>
 </p>
 
@@ -104,9 +104,9 @@ Online Product Ordering and Delivery System</a>
 </html>
 <script>
 function home() {
-    window.open("index.php","_self");
+    window.open("index.html","_self");
 }
 function workwithme(){
-	 window.open("workwithme.php","_self");
+	 window.open("workwithme.html","_self");
 }
 </script>
