--- a/workwithme.html
+++ b/workwithme.html
@@ -79,7 +79,7 @@ Contact Me
 <p id="text1">
 </p>
 <p id="text2">
-<a href="workwithme.php" target="_blank" style="text-decoration:none">
+<a href="workwithme.html" target="_blank" style="text-decoration:none">
 </a>
 </p>
 
@@ -114,9 +114,9 @@ No! I have work for you instead.
 </html>
 <script>
 function home() {
-    window.open("index.php","_self");
+    window.open("index.html","_self");
 }
 function openProjects() {
-    window.open("projects.php","_self");
+    window.open("projects.html","_self");
 }
 </script>
