--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ Contact Me:
 
 </div>
 <div id="title">
-<a href="index.php"> <img src="resources/websitemainlogo.png" alt="instagram" width="100" height="60" onmouseout="this.src='resources/websitemainlogo.png'" onmouseover="this.src='resources/logohover.png'">Aashutosh Shrestha
+<a href="index.html"> <img src="resources/websitemainlogo.png" alt="instagram" width="100" height="60" onmouseout="this.src='resources/websitemainlogo.png'" onmouseover="this.src='resources/logohover.png'">Aashutosh Shrestha
 </a>
 
 </div>
