--- a/404.html
+++ b/404.html
@@ -1,7 +1,18 @@
-
 <html>
+<head>
+<title>Aashutosh Shrestha</title>
+<style type="text/css">
+@import url("design/404.css");
+</style>
+</head>
 <body>
- <p>404 Error</p>
- <p>Sorry, We could not find what you were looking for in this website.</p>
+<div class="noise"></div>
+<div class="overlay"></div>
+<div class="terminal">
+  <h1>Error <span class="errorcode">404</span></h1>
+  <p class="output">The page you are looking for might have been removed, had its name changed or is temporarily unavailable.</p>
+  <p class="output">Please try to <a href="#">go back</a> or <a href="#2">return to the homepage</a>.</p>
+  <p class="output">Good luck.</p>
+</div>
 </body>
 </html>
