Changes to Projects

--- a/projects.html
+++ b/projects.html
@@ -70,11 +70,11 @@ Contact Me
   <div align="center">
 
 <p id="text1">
-Some of Projects are Mentioned Below:
+All of my public projects are available at:
 </p>
 <p id="text2">
 <a href="#" target="_blank" style="text-decoration:none">
-Bug Tracking System </a>
+github</a>
 </p>
 
 <p id="text2">
@@ -98,7 +98,7 @@ Online Product Ordering and Delivery System</a>
 </div>
 
 <div id="footer">
-<p align="center" style="color:white;">&copy; All Rights Reserved, Aashutosh Shrestha 2018  </p>
+<p align="center" style="color:white;">&copy; All Rights Reserved, Aashutosh Shrestha 2019  </p>
 </div>
 </body>
 </html>
