Changes to projects

--- a/projects.html
+++ b/projects.html
@@ -73,21 +73,8 @@ Contact Me
 All of my public projects are available at:
 </p>
 <p id="text2">
-<a href="#" target="_blank" style="text-decoration:none">
+<a href="github.com/aashutoshrestha" target="_blank" style="text-decoration:none">
 github</a>
-</p>
-
-<p id="text2">
-<a href="workwithme.html" target="_blank" style="text-decoration:none">
-Rent and Sell Application </a>
-</p>
-
-
-
-
-<p id="text2">
-<a href="#" target="_blank" style="text-decoration:none">
-Online Product Ordering and Delivery System</a>
 </p>
 
 
