Changes to projects

--- a/projects.html
+++ b/projects.html
@@ -73,7 +73,7 @@ Contact Me
 All of my public projects are available at:
 </p>
 <p id="text2">
-<a href="github.com/aashutoshrestha" target="_blank" style="text-decoration:none">
+<a href="https://github.com/aashutoshrestha" target="_blank" style="text-decoration:none">
 github</a>
 </p>
 
