--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -102,7 +102,7 @@
 
     <div class="container">
         <h1>Privacy Policy</h1>
-        <span class="last-updated">Last Updated: [Insert Date]</span>
+        <span class="last-updated">Last Updated: Feb 23, 2026</span>
 
         <p>This Privacy Policy describes Our policies and procedures on the collection, use, and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
 
@@ -145,12 +145,11 @@
         <h2>9. Contact Us</h2>
         <p>If you have any questions about this Privacy Policy, You can contact us:</p>
         <ul>
-            <li>By email: <a href="mailto:[Insert Email Address]">[Insert Email Address]</a></li>
-            <li>By visiting this page on our website: <a href="[Insert Website URL]">[Insert Website URL]</a></li>
+            <li>By email: <a href="mailto:contact@aashutoshrestha.com.np">contact@aashutoshrestha.com.np</a></li>
         </ul>
 
         <footer>
-            <p>&copy; [Insert Year] [Insert Developer/Company Name]. All rights reserved.</p>
+            <p>&copy; 2026 Aashutosh Shrestha. All rights reserved.</p>
         </footer>
     </div>
 
