--- a/termsandconditions.html
+++ b/termsandconditions.html
@@ -102,7 +102,7 @@
 
     <div class="container">
         <h1>Terms and Conditions</h1>
-        <span class="last-updated">Last Updated: [Insert Date]</span>
+        <span class="last-updated">Last Updated: Feb 23, 2026</span>
 
         <p>Welcome! These Terms and Conditions govern your use of our mobile application and services (the "Service"). By accessing or using the Service, you agree to be bound by these Terms. If you disagree with any part, please do not use the Service.</p>
 
@@ -150,7 +150,7 @@
         <p>We may terminate or suspend your access to the Service immediately, without prior notice, for any reason, including breach of these Terms. Upon termination, your right to use the Service will cease immediately.</p>
 
         <h2>11. Governing Law</h2>
-        <p>These Terms shall be governed by the laws of [Insert Your Country/State], without regard to its conflict of law provisions. Any disputes shall be resolved in the courts located in [Insert Your Jurisdiction].</p>
+        <p>These Terms shall be governed by the laws of Nepal, without regard to its conflict of law provisions. Any disputes shall be resolved in the courts located in Nepal.</p>
 
         <h2>12. Changes to Terms</h2>
         <p>We reserve the right to modify these Terms at any time. We will notify users of material changes by posting the new Terms and updating the "Last Updated" date. Your continued use of the Service after changes constitutes acceptance of the new Terms.</p>
@@ -158,12 +158,11 @@
         <h2>13. Contact Us</h2>
         <p>If you have any questions about these Terms, please contact us:</p>
         <ul>
-            <li>By email: <a href="mailto:[Insert Email Address]">[Insert Email Address]</a></li>
-            <li>By visiting this page on our website: <a href="[Insert Website URL]">[Insert Website URL]</a></li>
+            <li>By email: <a href="mailto:contact@aashutoshrestha.com.np">contact@aashutoshrestha.com.np</a></li>
         </ul>
 
         <footer>
-            <p>&copy; [Insert Year] [Insert Developer/Company Name]. All rights reserved.</p>
+            <p>&copy; 2026 Aashutosh Shrestha. All rights reserved.</p>
         </footer>
     </div>
 
