Refactor code structure for improved readability and maintainability

--- a/projects.html
+++ b/projects.html
@@ -1,99 +1,31 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>Work With Me</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Projects | Aashutosh Shrestha</title>
 <style type="text/css">
 @import url("design/design.css");
 </style>
 </head>
 <body>
-<div id="header">
-Contact Me:
-<a href="mailto:contact@aashutoshrestha.com.np" target="_blank" style="text-decoration:none">
-<img src="resources/email.png" alt="instagram" width="20" height="20" align="top" onmouseout="this.src='resources/email.png'" onmouseover="this.src='resources/mailhover.png'">contact@aashutoshrestha.com.np</a>
-&amp;
-<a href="tel:+977-986-81-05-448" target="_blank" style="text-decoration:none">
-<img src="resources/telephone.png" alt="instagram" width="20" height="20" align="top" onmouseout="this.src='resources/telephone.png'" onmouseover="this.src='resources/phonehover.png'">+977-986-81-05-448</a>
-
-</div>
-<div id="title">
-<a href="index.php"> <img src="resources/websitemainlogo.png" alt="instagram" width="100" height="60" onmouseout="this.src='resources/websitemainlogo.png'" onmouseover="this.src='resources/logohover.png'">Aashutosh Shrestha
-</a>
-
-</div>
-
-
-<div id="container">
-<div id="right">
-
-<a href="https://www.facebook.com/aashutoshrestha/" target="_blank"> 
-<img src="resources/fb.png" alt="instagram" width="40" height="40" onmouseout="this.src='resources/fb.png'" onmouseover="this.src='resources/fbhover.png'"></a>
-<p>
-<a href="https://www.instagram.com/aashutoshrestha/" target="_blank">
-<img src="resources/insta.png" alt="instagram" width="40" height="40" onmouseout="this.src='resources/insta.png'" onmouseover="this.src='resources/instahover.png'"></a>
-</p>
-<p>
-<a href="https://www.twitter.com/aashutoshrestha/" target="_blank"> 
-<img src="resources/twitter.png" alt="instagram" width="40" height="40" onmouseout="this.src='resources/twitter.png'" onmouseover="this.src='resources/twitterhover.png'"></a>
-</p>
-<p>
-<a href="https://www.github.com/aashutoshrestha/" target="_blank"> 
-<img src="resources/github.png" alt="instagram" width="40" height="40" onmouseout="this.src='resources/github.png'" onmouseover="this.src='resources/githover.png'"></a>
-</p>
-<a href="https://www.linkedin.com/in/aashutosh-shrestha-865010111/" target="_blank"> 
-<img src="resources/linkedin.png" alt="instagram" width="40" height="40" onmouseout="this.src='resources/linkedin.png'" onmouseover="this.src='resources/linkedinhover.png'"></a>
-</div>
-
-
-
-
-  <div id="left">
-  <div id="divmenu">
-<div id="menu">
-<div id="menu" onclick="home()">Home </div>
-</div>
-<div id="menu">
-<div id="currentmenu">
->>>Projects<<<
-</div>
-</div>
-<div id="menu">
-About Me
-</div>
-<div id="menu" onclick="workwithme()">
-Work with Me
-</div>
-<div id="menu">
-Contact Me
-</div>
-</div>
-  </div>
-  <div align="center">
-
-<p id="text1">
-All of my public projects are available at:
-</p>
-<p id="text2">
-<a href="https://github.com/aashutoshrestha" target="_blank" style="text-decoration:none">
-github</a>
-</p>
-
-
-
-</div>
-</div>
-
-</div>
-
-<div id="footer">
-<p align="center" style="color:white;">&copy; All Rights Reserved, Aashutosh Shrestha 2019  </p>
-</div>
+  <div class="bg-grid"></div>
+  <main class="shell">
+    <section class="hero-card">
+      <p class="eyebrow">PROJECTS</p>
+      <h1>Public Work</h1>
+      <p class="hero-text">The latest public repositories and project activity are available on GitHub.</p>
+      <p class="hero-text"><a href="https://github.com/aashutoshrestha" target="_blank">Open GitHub Profile</a></p>
+    </section>
+    <footer class="minimal-footer">
+      <a href="index.html">Home</a>
+      <span>•</span>
+      <a href="workwithme.html">Work With Me</a>
+      <span>•</span>
+      <a href="privacypolicy.html">Privacy</a>
+      <span>•</span>
+      <a href="termsandconditions.html">Terms</a>
+    </footer>
+  </main>
 </body>
 </html>
-<script>
-function home() {
-    window.open("index.html","_self");
-}
-function workwithme(){
-	 window.open("workwithme.html","_self");
-}
-</script>
