--- a/index.html
+++ b/index.html
@@ -1,122 +1,50 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>Aashutosh Shrestha</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Aashutosh Shrestha | AI Resume</title>
 <style type="text/css">
 @import url("design/design.css");
 </style>
 </head>
 <body>
-<div id="header">
-Contact Me:
-<a href="mailto:contact@aashutoshrestha.com.np" target="_blank" style="text-decoration:none">
-<img src="resources/email.png" alt="instagram" width="20" height="20" align="top" onmouseout="this.src='resources/email.png'" onmouseover="this.src='resources/mailhover.png'">contact@aashutoshrestha.com.np</a>
-&amp;
-<a href="tel:+977-986-81-05-448" target="_blank" style="text-decoration:none">
-<img src="resources/telephone.png" alt="instagram" width="20" height="20" align="top" onmouseout="this.src='resources/telephone.png'" onmouseover="this.src='resources/phonehover.png'">+977-986-81-05-448</a>
+  <div class="bg-grid"></div>
+  <main class="shell">
+    <section class="hero-card">
+      <div class="hero-head">
+        <img class="hero-logo" src="resources/websitemainlogo.png" alt="Aashutosh logo" />
+        <div>
+          <p class="eyebrow">PERSONAL AI PROFILE</p>
+          <h1>Aashutosh Shrestha</h1>
+          <p class="subtitle">Smartphone App Engineer (iOS) • Osaka, Japan</p>
+        </div>
+      </div>
+      <p class="hero-text">
+        Ask this assistant anything about Aashutosh’s skills, projects, education, and career history.
+        It is strictly limited to his profile only.
+      </p>
+    </section>
 
-</div>
-<div id="title">
-<a href="index.html"> <img src="resources/websitemainlogo.png" alt="instagram" width="100" height="60" onmouseout="this.src='resources/websitemainlogo.png'" onmouseover="this.src='resources/logohover.png'">Aashutosh Shrestha
-</a>
+    <section id="qaWrapper" class="qa-panel">
+      <p id="qaStatus">Model status: Not loaded</p>
+      <div id="qaOutput">Hi! I answer questions only about Aashutosh Shrestha based on this website and resume.</div>
+      <div id="qaExamples">Try: “What are his top mobile skills?”, “Where does he work now?”, “Tell me about NextBook.”</div>
+      <div id="qaInputRow">
+        <input id="qaInput" type="text" placeholder="Ask about experience, skills, projects, education..." maxlength="240" />
+        <button id="qaAskButton" type="button">Ask</button>
+      </div>
+    </section>
 
-</div>
-
-
-<div id="container">
-<div id="right">
-
-<a href="https://www.facebook.com/aashutoshrestha/" target="_blank"> 
-<img src="resources/fb.png" alt="instagram" width="40" height="40" onmouseout="this.src='resources/fb.png'" onmouseover="this.src='resources/fbhover.png'"></a>
-<p>
-<a href="https://www.instagram.com/aashutoshrestha/" target="_blank">
-<img src="resources/insta.png" alt="instagram" width="40" height="40" onmouseout="this.src='resources/insta.png'" onmouseover="this.src='resources/instahover.png'"></a>
-</p>
-<p>
-<a href="https://www.twitter.com/aashutoshrestha/" target="_blank"> 
-<img src="resources/twitter.png" alt="instagram" width="40" height="40" onmouseout="this.src='resources/twitter.png'" onmouseover="this.src='resources/twitterhover.png'"></a>
-</p>
-<p>
-<a href="https://www.github.com/aashutoshrestha/" target="_blank"> 
-<img src="resources/github.png" alt="instagram" width="40" height="40" onmouseout="this.src='resources/github.png'" onmouseover="this.src='resources/githover.png'"></a>
-</p>
-<a href="https://www.linkedin.com/in/aashutosh-shrestha-865010111/" target="_blank"> 
-<img src="resources/linkedin.png" alt="instagram" width="40" height="40" onmouseout="this.src='resources/linkedin.png'" onmouseover="this.src='resources/linkedinhover.png'"></a>
-</div>
-
-
-
-
-  <div id="left">
-  <div id="divmenu">
-<div id="menu"> Home 
-</div>
-<div id="menu" onclick="openProjects()">
-Projects
-</div>
-<div id="menu">
-About Me
-</div>
-<div id="menu"  onclick="workwithme()">
-Work with Me
-</div>
-<div id="menu">
-Contact Me
-</div>
-</div>
-  </div>
-  <div align="center">
-  
-  <!-- do not display at moment
-<p id="text1">
-Some of the things i am currently busy doing with my spare time. Reading Book:
-</p>
-<p id="text2">
-<a href="https://www.amazon.com/God-Not-Great-Religion-Everything/dp/0446697966" target="_blank" style="text-decoration:none">
-"God is Not Great" by Christopher Hitchens </a>
-</p>
-
-<p id="text1">
-Researching on:
-</p>
-<p id="text2">
-<a href="workwithme.php" target="_blank" style="text-decoration:none">
-Quantum Computing </a>
-</p>
-
-
-
-<p id="text1">
-Playing:
-</p>
-<p id="text2">
-<a href="https://godofwar.playstation.com/" target="_blank" style="text-decoration:none">
-God of War 4</a>
-</p>
-<p id="text2">
-<a href="https://playbattlegrounds.com" target="_blank" style="text-decoration:none">
-PlayerUnknown's Battleground </a>
-</p>
-<p id="text2">
-<a href="https://far-cry.ubisoft.com/game/en-us/home/" target="_blank" style="text-decoration:none">
-Far Cry 5 </a>
-</p>
--->
-
-</div>
-</div>
-
-</div>
-
-<div id="footer">
-<p align="center" style="color:white;">&copy; All Rights Reserved, Aashutosh Shrestha 2018  </p>
-</div>
+    <footer class="minimal-footer">
+      <a href="mailto:contact@aashutoshrestha.com.np">contact@aashutoshrestha.com.np</a>
+      <span>•</span>
+      <a href="privacypolicy.html">Privacy</a>
+      <span>•</span>
+      <a href="termsandconditions.html">Terms</a>
+    </footer>
+  </main>
 </body>
 </html>
-<script>
-function openProjects() {
-    window.open("projects.html","_self");
-}
-function workwithme(){
-	 window.open("workwithme.html","_self");
-}
-</script>
+<script src="resources/personal-kb.js"></script>
+<script type="module" src="resources/personal-qa.js"></script>
