Update personal profile and project descriptions; enhance availability information and collaboration prompts

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div>
           <p class="eyebrow">PERSONAL AI PROFILE</p>
           <h1>Aashutosh Shrestha</h1>
-          <p class="subtitle">Smartphone App Engineer (iOS) • Osaka, Japan</p>
+          <p class="subtitle">Software Engineer • Mobile Apps, LLM Integration, Web & Backend • Osaka, Japan</p>
         </div>
       </div>
       <p class="hero-text">
