--- a/projects.html
+++ b/projects.html
@@ -15,6 +15,7 @@
       <p class="eyebrow">PROJECTS</p>
       <h1>Public Work</h1>
       <p class="hero-text">The latest public repositories and project activity are available on GitHub.</p>
+      <p class="hero-text">This includes mobile apps and websites, including projects that integrate LLM features.</p>
       <p class="hero-text"><a href="https://github.com/aashutoshrestha" target="_blank">Open GitHub Profile</a></p>
     </section>
     <footer class="minimal-footer">
