--- a/workwithme.html
+++ b/workwithme.html
@@ -15,6 +15,7 @@
       <p class="eyebrow">COLLABORATION</p>
       <h1>Work With Me</h1>
       <p class="hero-text">For internships, jobs, and technical collaborations, share your details and CV using the links below.</p>
+      <p class="hero-text">I am available to work on projects. For any project proposal, please contact me by email.</p>
       <p class="hero-text"><a href="https://www.dropbox.com/request/5cS6pbNCKhYnywe49OK3" target="_blank">Submit CV (Internship / Job)</a></p>
       <p class="hero-text"><a href="mailto:contact@aashutoshrestha.com.np">Email Directly</a></p>
     </section>
